# tadProject

./: .gitignore  LICENSE  _setup.py  _utils.py  click.py  data.py  diamonds.py  distillation.py  homology.py  mnist.ipynb  neighborhood.ipynb  opensearch.py  polytope_cover.py  pyproject.toml  stat.ipynb  taco_test.py  utils.py  wrappers.py
distance/: distance_0.pt  distance_1.pt  distance_2.pt  distance_3.pt  distance_4.pt  distance_5.pt  distance_6.pt  distance_7.pt
estimators/: curvature.py  delta.py  dimension.py  entropy.py  homology.py  magnitude.py
functional/: __init__.py  curvature.py  delta.py  dimension.py  entropy.py  homology.py  information.py  kernel.py  magnitude.py
modules/: mixin.py  network.py  observer.py  transformer.py
nn/: __init__.py  base.py  mixin.py  module.py  observer.py
nn/functional/: __init__.py  dimension.py  entropy.py  homology.py  magnitude.py
nn/loss/: betti.py  dimension.py  functional.py  ph.py  signature.py  vr.py
nn/modules/: dimension.py  entropy.py  graph.py  (+5 more)
notebooks/: KC_April.ipynb  KC_April2-2.ipynb  KC_April3.ipynb  KC_May1.ipynb  KC_May19-2.ipynb  KC_May19.ipynb  KC_May_25.ipynb  RegExp seminar.ipynb  autoencoder.ipynb  graph.ipynb  mnist2.ipynb  resnet.ipynb  ripser.ipynb  slider.ipynb  tensorboard.ipynb  witness.ipynb
topology/: __init__.py  base.py  dimension.py  entropy.py  graph.py  homology.py  hyperbolic.py  mapper.py  module.py  topologybase.py
utils/: matching.py  math.py  tensorboard.py
wrappers/: __init__.py  dimension.py  homology.py  image.py  mapper.py  network.py  transformer.py
(+40 files in other folders)
