[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "intrinsic"
version = "0.0.3"
authors = [
  { name="Andrew Popov", email="agpopov_1@edu.hse.ru" },
]
description = "A package for TDA"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
